Added updated CC license guidance to encoding templates and conversion XSLT

--- a/articles/templates/dhq-tei_template.xml
+++ b/articles/templates/dhq-tei_template.xml
@@ -24,7 +24,14 @@
                 <idno type="issue"><!-- issue number, without leading zeroes: e.g. 2 --></idno>
                 <date></date>
                 <dhq:articleType>article</dhq:articleType>
-                <availability status="CC-BY-ND"><cc:License rdf:about="http://creativecommons.org/licenses/by-nd/2.5/"/></availability>
+                <availability status="CC-BY-ND">
+<!-- If using a different license from the default, choose one of the following:
+                  CC-BY-ND (DHQ default): <cc:License rdf:about="http://creativecommons.org/licenses/by-nd/2.5/"/>     
+                  CC-BY:  <cc:License rdf:about="https://creativecommons.org/licenses/by/2.5/"/>
+                  CC0: <cc:License rdf:about="https://creativecommons.org/publicdomain/zero/1.0/"/>
+-->                    
+                    <cc:License rdf:about="http://creativecommons.org/licenses/by-nd/2.5/"/>
+                </availability>
             </publicationStmt>
             
             <sourceDesc>
