--- a/articles/templates/dhq_translation_template.xml
+++ b/articles/templates/dhq_translation_template.xml
@@ -38,6 +38,11 @@
             <date when=""><!-- date: e.g. 22 July 2010 --></date>
             <dhq:articleType></dhq:articleType>
             <availability status="CC-BY-ND">
+<!--         If using a different license from the default, choose one of the following:
+                  CC-BY-ND (DHQ default): <cc:License rdf:about="http://creativecommons.org/licenses/by-nd/2.5/"/>     
+                  CC-BY:  <cc:License rdf:about="https://creativecommons.org/licenses/by/2.5/"/>
+                  CC0: <cc:License rdf:about="https://creativecommons.org/publicdomain/zero/1.0/"/>
+-->                    
                <cc:License rdf:about="https://creativecommons.org/licenses/by-nd/2.5/"/>
             </availability>
          </publicationStmt>
