Adding new <idno type="ORCID"> to all templates

--- a/articles/templates/dhq_translation_template.xml
+++ b/articles/templates/dhq_translation_template.xml
@@ -14,6 +14,7 @@
                          The value of xml:id should be first_last without diacritics, all lower case.
                     -->
                     <dhq:author_name>first name(s) <dhq:family>family name</dhq:family></dhq:author_name>
+                    <idno type="ORCID"><!-- if the author has an ORCID ID, include the full URI, e.g. https://orcid.org/0000-0000-0000-0000 --></idno>
                     <dhq:affiliation></dhq:affiliation>
                     <email></email>
                     <dhq:bio><p></p></dhq:bio>
