--- a/articles/templates/dhq-tei_template.xml
+++ b/articles/templates/dhq-tei_template.xml
@@ -11,6 +11,7 @@
                 <dhq:authorInfo>
                     <!-- Include a separate <dhq:authorInfo> element for each author -->
                     <dhq:author_name>first name(s) <dhq:family>family name</dhq:family></dhq:author_name>
+                    <idno type="ORCID"><!-- if the author has an ORCID ID, include the full URI, e.g. https://orcid.org/0000-0000-0000-0000 --></idno>
                     <dhq:affiliation></dhq:affiliation>
                     <email></email>
                     <dhq:bio><p></p></dhq:bio>
