--- a/common/css/taxonomy_tei.css
+++ b/common/css/taxonomy_tei.css
@@ -1,23 +1,35 @@
 category {
-	display:block;
+     display: block; 
 }
 
 term {
-	display:block;
+     display: inline;
+     padding-left: 2em;
+     padding-right: 1em;
+     text-align: left;
 }
 
-term[type="prefLabel"] {
-	display:block;
+term[type = "prefLabel"] {
+     display: block;
+     font-weight: bold;
+     font-style: normal;
 }
 
-term[type="definition"] {
-	display:block;	
+term[type = "description"] {
+     display: block;
+     font-style: normal;
+     text-align: left;
+}
+term[type = "scopeNote"] {
+     display: block;
+     font-style: normal;
+     text-align: left;
 }
 
 fileDesc {
-	display:none;
+     display: none;
 }
 
 text {
-	display:none;
+     display: none;
 }
