update 607, continue work on taxonomy css

--- a/common/css/taxonomy_tei.css
+++ b/common/css/taxonomy_tei.css
@@ -4,8 +4,8 @@ category {
 
 term {
      display: inline;
-     padding-left: 2em;
-     padding-right: 1em;
+     padding-left: 30px;
+     padding-right: 15px;
      text-align: left;
 }
 
@@ -13,6 +13,7 @@ term[type = "prefLabel"] {
      display: block;
      font-weight: bold;
      font-style: normal;
+     font-size:larger;
 }
 
 term[type = "description"] {
