--- a/common/css/taxonomy_tei.css
+++ b/common/css/taxonomy_tei.css
@@ -1,9 +1,17 @@
 category {
-     display: block; 
+     display: block;
+     text-align: left;
 }
-
+category:before {
+     content: attr(n) " * * * * * *";
+     white-space: pre;
+}
+category:after {
+     content: "\a";
+     white-space: pre;
+}
 term {
-     display: inline;
+     display: block;
      padding-left: 30px;
      padding-right: 15px;
      text-align: left;
@@ -13,7 +21,7 @@ term[type = "prefLabel"] {
      display: block;
      font-weight: bold;
      font-style: normal;
-     font-size:larger;
+     font-size: larger;
 }
 
 term[type = "description"] {
@@ -23,7 +31,7 @@ term[type = "description"] {
 }
 term[type = "scopeNote"] {
      display: block;
-     font-style: normal;
+     font-style: italic;
      text-align: left;
 }
 
