--- a/common/css/taxonomy_tei.css
+++ b/common/css/taxonomy_tei.css
@@ -1,9 +1,11 @@
 category {
      display: block;
      text-align: left;
+     padding-left: 30px;
+     padding-right: 10px;
 }
 category:before {
-     content: attr(n) " * * * * * *";
+     content: "* * * * * *";
      white-space: pre;
 }
 category:after {
@@ -11,10 +13,10 @@ category:after {
      white-space: pre;
 }
 term {
-     display: block;
-     padding-left: 30px;
-     padding-right: 15px;
-     text-align: left;
+     display: inline-block;
+}
+term:not(term[type = "description"]):not(term[type = "prefLabel"]):not(term[type = "scopeNote"]):after {
+     content: "  ||  "
 }
 
 term[type = "prefLabel"] {
@@ -23,16 +25,11 @@ term[type = "prefLabel"] {
      font-style: normal;
      font-size: larger;
 }
-
 term[type = "description"] {
-     display: block;
      font-style: normal;
-     text-align: left;
 }
 term[type = "scopeNote"] {
-     display: block;
      font-style: italic;
-     text-align: left;
 }
 
 fileDesc {
