--- a/common/css/taxonomy_tei.css
+++ b/common/css/taxonomy_tei.css
@@ -2,10 +2,10 @@ category {
      display: block;
      text-align: left;
      padding-left: 30px;
-     padding-right: 10px;
+     padding-right: 20px;
 }
 category:before {
-     content: "* * * * * *";
+     content: "\a* * * * * *";
      white-space: pre;
 }
 category:after {
@@ -22,16 +22,14 @@ term:not(term[type = "description"]):not(term[type = "prefLabel"]):not(term[type
 term[type = "prefLabel"] {
      display: block;
      font-weight: bold;
-     font-style: normal;
      font-size: larger;
 }
 term[type = "description"] {
-     font-style: normal;
+     display: block;
 }
 term[type = "scopeNote"] {
      font-style: italic;
 }
-
 fileDesc {
      display: none;
 }
