Updated CSS to support indentation of poetry.

--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -103,9 +103,17 @@ blockquote.quotedlist ul.simple li {
 	margin-left: 0;
 }
 div.l {
-    padding-left: 2em;
-    text-indent: -1.5em;
+    padding-left: 1em;
+    text-indent: -1em;
 }
+
+.indent-1 {text-indent:0em !important;}
+.indent-2 {text-indent:1em !important;}
+.indent-3 {text-indent:2em !important;}
+.indent-4 {text-indent:3em !important;}
+.indent-5 {text-indent:4em !important;}
+.indent-6 {text-indent:5em !important;}
+
 div.epigraph {
     padding-top: 2em;
     padding-bottom: 2em;
