New and updated files for project registry
Created projects.xml, edited all of the encoding templates to add metadata for project inventory in article headers.

--- a/articles/templates/dhq_author_template.xml
+++ b/articles/templates/dhq_author_template.xml
@@ -45,6 +45,9 @@
                 <taxonomy xml:id="authorial_keywords">
                     <bibl>Keywords supplied by author; no controlled vocabulary</bibl>
                 </taxonomy>
+            	<taxonomy xml:id="project_keywords">
+            		<bibl>DHQ project registry; full list available at <ref target="http://www.digitalhumanities.org/dhq/projects.xml">http://www.digitalhumanities.org/dhq/projects.xml</ref></bibl>
+            	</taxonomy>
             </classDecl>
         </encodingDesc>
         <profileDesc>
@@ -64,6 +67,11 @@
                         <item></item>
                     </list>
                 </keywords>
+            	<keywords scheme="#project_keywords">
+            		<list type="simple">
+            			<item></item>
+            		</list>
+            	</keywords>
             </textClass>
         </profileDesc>
         <revisionDesc>
