--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -150,6 +150,12 @@ div#worksCited h2, div#notes h2 {
 div#worksCited div.bibl span.ref {
     font-weight: bold;
 }
+/* added the rule below to accommodate bibls that are in a listBibl in an Appendix, to allow their labels to be bold */
+div.div0 span.bibl span.ref {
+    font-weight: bold;
+}
+
+
 a.ref {
      font-weight: normal;
 }
