Updates to XSLT for bibliographies
Consolidated the handling and styling of <listBibl> and <bibl> to support bibliographic lists in the body of DHQ articles.

--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -151,7 +151,7 @@ div#worksCited div.bibl span.ref {
     font-weight: bold;
 }
 /* added the rule below to accommodate bibls that are in a listBibl in an Appendix, to allow their labels to be bold */
-div.div0 span.bibl span.ref {
+div.div0 div.bibl span.ref {
     font-weight: bold;
 }
 
