--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -136,6 +136,16 @@ div#worksCited div.bibl {
     text-align: left;
 }
 
+/* accommodate bibliographic lists outside the Works Cited */
+div.div0 div.bibl {
+    margin: 1em 0;
+    padding-left: 2em;
+    text-indent: -1.5em;
+    width: 95%;
+    text-align: left;
+}
+
+
 div.bibl div.bibl {
     display:inline;
     margin:0 !important;
