--- a/articles/templates/dhq-tei_template.xml
+++ b/articles/templates/dhq-tei_template.xml
@@ -60,9 +60,9 @@
             <textClass>
                 <keywords scheme="#dhq_keywords">
                     <!-- Authors may suggest one or more keywords from the DHQ keyword list, visible at http://www.digitalhumanities.org/dhq/taxonomy.xml; these may be supplemented or modified by DHQ editors -->
-                    <list type="simple">
-                        <item></item>
-                    </list>
+                	
+                	<!-- Enter keywords below preceeded by a "#". Create a new <term> element for each -->
+                    <term corresp=""/>
                 </keywords>
                 <keywords scheme="#authorial_keywords">
                     <!-- Authors may include one or more keywords of their choice -->
