--- a/articles/templates/dhq-tei_template.xml
+++ b/articles/templates/dhq-tei_template.xml
@@ -59,7 +59,7 @@
             </langUsage>
             <textClass>
                 <keywords scheme="#dhq_keywords">
-                    <!-- Authors may suggest one or more keywords from the DHQ keyword list, visible at http://www.digitalhumanities.org/dhq/taxonomy.xml; these may be supplemented or modified by DHQ editors -->
+                    <!-- Authors may suggest one or more keywords from the DHQ keyword list, visible at https://github.com/Digital-Humanities-Quarterly/dhq-journal/wiki/DHQ-Topic-Keywords; these may be supplemented or modified by DHQ editors -->
                 	
                 	<!-- Enter keywords below preceeded by a "#". Create a new <term> element for each -->
                     <term corresp=""/>
