first pass at hardcoded recommendations for SPECTER and Keywords

--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -257,7 +257,7 @@ h1.volumeIssue {
     color: #333333;
     margin-top: -10px;
 }
-#abstract, div.revisionNote {
+#abstract, #recommendations, div.revisionNote {
     border: 1px solid black;
     margin: 1em;
     margin-bottom: 4em;
@@ -266,7 +266,7 @@ h1.volumeIssue {
     font-size: .9em;
     padding: 1em 2em;
 }
-.abstract {
+.abstract, .recommendations {
 	border: 1px solid black;
     margin: 1em;
     width: 85%;
