change recommendation box color for better contrast with links, shorten <a> tag on documentation out to explore.html

--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -257,7 +257,7 @@ h1.volumeIssue {
     color: #333333;
     margin-top: -10px;
 }
-#abstract, #recommendations, div.revisionNote {
+#abstract,  div.revisionNote {
     border: 1px solid black;
     margin: 1em;
     margin-bottom: 4em;
@@ -266,7 +266,7 @@ h1.volumeIssue {
     font-size: .9em;
     padding: 1em 2em;
 }
-.abstract, .recommendations {
+.abstract {
 	border: 1px solid black;
     margin: 1em;
     width: 85%;
@@ -274,6 +274,15 @@ h1.volumeIssue {
     font-size: .8em;
     padding: 1em 2em;
 }
+#recommendations {
+	border: 1px solid black;
+    margin: 1em;
+    width: 85%;
+    background-color: #eeeeee;
+    font-size: .8em;
+    padding: 1em 2em;
+}
+
 input {
     border: 1px solid black;
 }
