Adjust the styling of "preview": white text with a black outline

--- a/common/css/dhq_preview.css
+++ b/common/css/dhq_preview.css
@@ -1,13 +1,16 @@
 /* CSS for the DHQ preview site — overrides the main CSS rules */
 
-/* Make the banner sepia. */
+/* Apply a sepia filter to the banner image. */
 #backgroundpic img {
   filter: sepia();
 }
 .preview-warn {
-  font-size: 2em;
+  color: white;
+  font-size: 3rem;
   font-weight: bold;
-  text-shadow: #FC0 1px 0 10px;
+  /* The first four shadows add a black outline around the word. The last adds a diffuse yellow shadow 
+     for additional contrast. */
+  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000, -1px -1px 0 #000, #FC0 1px 0 10px;
   text-transform: uppercase;
   z-index: 5;
   position: absolute;
