Implement CSS suggestions for readability

--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -275,12 +275,16 @@ h1.volumeIssue {
     padding: 1em 2em;
 }
 #recommendations {
-	border: 1px solid black;
+    border: 1px solid black;
     margin: 1em;
     width: 85%;
-    background-color: #eeeeee;
-    font-size: .8em;
+    background-color: #f7f7f7;
+    font-size: .95em;
     padding: 1em 2em;
+}
+/* Using a darker blue for the recommendation links improves contrast */
+#recommendations a:link {
+    color: #005199;
 }
 
 input {
