Add internal navigation for author index.
author_index.xsl now includes a navigation bar (redesigned for
accessibility), and headings for the alphabetical groupings of
authors.

The navbar is now represented with a list inside <nav>, rather than
a table. I've adjusted the CSS to make the navbar look much like it
used to, though it will now wrap on smaller screens.

--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -370,3 +370,23 @@ padding: 3px 10px;
 }
 
 .license {margin-top:1em; font-size: .75em;}
+
+
+/* CSS specific to the Author and Title indexes */
+
+#mainContent .index-navbar ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.75em 0;
+  justify-content: center;
+  list-style: none;
+  margin-left: 0;
+  padding: 0.25em 0.5em;
+}
+
+#mainContent .index-navbar ul li {
+  border: thin solid #dddddd;
+  display: inline-block;
+  padding: 0.125em 0.75em;
+  position: unset;
+}
