Use CSS media queries instead of `expression()`.
It looks like `expression()` was used prior to Internet Explorer 8.

In dhq_screen.css, I replaced these with CSS media queries, which
are a standardized way of capturing the same behavior (no greater-
than symbol necessary).

In dhq.css, I used `width` and `max-width` rules to capture what I
_think_ the expression was trying to do. We don't need to support
IE6 anymore, I hope.

I also removed the full-page background image in favor of a
background color and border on the sidebar. The static site now
looks much the same as the Cocoon site.

--- a/common/css/dhq.css
+++ b/common/css/dhq.css
@@ -39,8 +39,10 @@ div#pubInfo {
     /* Watermark ends. [CRB] */
 }
 #mainContent img {
-    max-width: 85%;
-    width: expression(this.width > 700 ? 700: true); /* for IE6 fake max-width */
+    max-width: 700px;
+    width: auto;
+    /*max-width: 85%;
+    width: expression(this.width > 700 ? 700: true);*/ /* for IE6 fake max-width */
 }
 #mainContent ol li {
     display: list-item;
@@ -192,9 +194,11 @@ div.table {
     margin: .5em 0 .5em 2em;
     color: #333333;
 }
-div.figure img {
-    max-width: 100%;
-    width: expression(this.width > 700 ? 700: true); * for IE6 fake max-width */
+/* We need to include `#mainContent` here to override the `#mainContent img` rule above. */
+#mainContent div.figure img {
+    width: 100%;
+    /*max-width: 100%;
+    width: expression(this.width > 700 ? 700: true);*/ /* for IE6 fake max-width */
 }
 pre {
     white-space: pre-wrap;
