Updated the metadata comments for clarity

--- a/articles/templates/dhq-tei_template.xml
+++ b/articles/templates/dhq-tei_template.xml
@@ -19,8 +19,12 @@
             </titleStmt>
             <publicationStmt><publisher>Alliance of Digital Humanities Organizations</publisher>
 <publisher>Association for Computers and the Humanities</publisher>
-                <!-- This information will be completed at publication -->
+            	
+            	<!-- This information should be added when the file is created -->
                 <idno type="DHQarticle-id"><!-- including leading zeroes: e.g. 000110 --></idno>
+
+            	
+            	<!-- This information will be completed at publication -->
                 <idno type="volume"><!-- volume number, with leading zeroes as needed to make 3 digits: e.g. 006 --></idno>
                 <idno type="issue"><!-- issue number, without leading zeroes: e.g. 2 --></idno>
                 <date><!-- include @when with ISO date and also content in the form 23 February 2024 --></date>
