--- a/articles/templates/dhq_translation_template.xml
+++ b/articles/templates/dhq_translation_template.xml
@@ -30,10 +30,13 @@
             </dhq:translatorInfo>
          </titleStmt>
          <publicationStmt>
-                <!-- This information will be completed at publication -->            
             <publisher>Alliance of Digital Humanities Organizations</publisher>
             <publisher>Association for Computers and the Humanities</publisher>
+
+         	<!-- This information should be added when the XML file is created. -->            
             <idno type="DHQarticle-id"><!-- including leading zeroes: e.g. 000110 --></idno>
+
+         	<!-- This information will be completed at publication -->            
             <idno type="volume"><!-- volume number, with leading zeroes: e.g. 006 --></idno>
             <idno type="issue"><!-- issue number, without leading zeroes: e.g. 2 --></idno>
             <date when=""><!-- date: e.g. 22 July 2010 --></date>
