Cosmetic fixes to search interface

--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -119,9 +119,9 @@ Banner, Top Navigation
 }
 #search {
     margin-top: 3px;
-    position: absolute;
-    right: 5px;
-    min-width: 200px;
+    float: right;
+    margin-right: .5em
+   
 }
 a.topnav:visited {
     color: #000000;
