--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -117,11 +117,10 @@ Banner, Top Navigation
     margin-top: 3px;
 	position: absolute;
 }
-#search {
+#searchStuff {
     margin-top: 3px;
     float: right;
-    margin-right: .5em
-   
+    margin-right: .5em;
 }
 a.topnav:visited {
     color: #000000;
@@ -308,6 +307,7 @@ h1.volumeIssue {
 input {
     border: 1px solid black;
     margin-right:2px;
+    margin-left:.5em;
     padding: 1.5px;
 }
 
