Fix relative paths for image resources referenced in CSS
Because the stylesheet is inlined the URLs are relative to the URL of the page; and since this is for elements common to pages at many different URL structures the best solution is probably to use an absolute URI path.

--- a/common/css/dhq_screen.css
+++ b/common/css/dhq_screen.css
@@ -2,7 +2,7 @@
 
 body {
     font-size: .9em;
-    /*background-image: url('../images/bar.png');
+    /*background-image: url('/common/images/bar.png');
     background-repeat: repeat-y;*/
     min-width: 800px;
     width: 800px;
@@ -175,7 +175,7 @@ Side Navigation, Side Content
     margin: .2em;
 }
 #leftsidebar li {
-    background-image: url('../images/bullet.gif');
+    background-image: url('/common/images/bullet.gif');
     background-repeat: no-repeat;
     background-position: 0 .4em;
     padding-left: .8em;
@@ -204,7 +204,7 @@ p.leftsidebar {
     margin: .2em;
 }
 #leftsidenav li {
-    background-image: url('../images/arrows.gif');
+    background-image: url('/common/images/arrows.gif');
     background-repeat: no-repeat;
     background-position: .1em;
     padding-left: 1.3em;
